# cv-builder-and-coverletter-builder

./: .coverage  .env.example  .gitignore  Dockerfile  PROGRESS.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  workflow_requirements.md
input/: HPC_Quantum_Job_Matching_Results.xlsx  jobs.xlsx
output/: Job_Matching_Updated.xlsx  ~$Job_Matching_Updated.xlsx
profile/: experience.json  master_resume.json  projects.json  skills.json
profile/atomic/: index.json
profile/atomic/coursework/: quantum.json
profile/atomic/cross_cutting/: tools.json
profile/atomic/projects/: comp_arch.json  lsim.json  thermal_battery.json
profile/atomic/work/: no_border.json
profile/faiss/: ids.json  index.faiss
scripts/: build_knowledge_index.py
src/: __init__.py  config.py  cover_letter_generator.py  deduplicator.py  excel_loader.py  excel_updater.py  latex_compiler.py  main.py  matcher.py  resume_generator.py
src/job_automation/: __init__.py  cli.py  config.py  logging.py  py.typed
src/job_automation/engines/: __init__.py  achievement_rewriter.py  ats_validator.py  base.py  company_researcher.py  exceptions.py  experience_selector.py  grounding.py  job_analyzer.py  keyword_extractor.py  latex_generator.py  llm_client.py  orchestrator.py  project_selector.py  recruiter_reviewer.py  resume_critic.py  skill_gap.py  summary_generator.py
src/job_automation/io/: __init__.py  excel_reader.py  excel_writer.py  profile_loader.py
src/job_automation/knowledge/: __init__.py  embeddings.py  graph.py  retriever.py
src/job_automation/models/: __init__.py  analysis.py  atomic.py  company.py  job.py  profile.py  results.py  review.py
templates/: cv_template.tex
tests/: conftest.py  test_automation.py  test_config.py  test_io.py  test_io_excel_writer.py  test_logging.py  test_models.py  test_v2_engines.py
