[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-automation"
version = "0.2.0"
description = "AI-assisted job application document generation pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Aswanth Bindu Ajith" }]
keywords = ["job-automation", "resume", "ats", "latex", "cover-letter"]

# Runtime dependencies — pinned to major.minor so pip can resolve patches
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "python-docx>=0.8.11",
    "pylatex>=1.4.1",
    "rapidfuzz>=3.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
]

[project.scripts]
# Replaces `python src/main.py`. Workers (M3) will reuse the same entry point
# for `celery -m job_automation.orchestration.worker`.
job-automation = "job_automation.cli:main"

[project.urls]
Repository = "https://github.com/Aswa/job-automation"

# ──────────────────────────────────────────────────────────────────────
# Hatchling build config
# ──────────────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
# Only the new package is shipped. The legacy engines in src/*.py stay as
# development sources for the migration window but are not installed.
packages = ["src/job_automation"]
exclude = [
    "src/config.py",
    "src/excel_loader.py",
    "src/deduplicator.py",
    "src/matcher.py",
    "src/resume_generator.py",
    "src/cover_letter_generator.py",
    "src/latex_compiler.py",
    "src/excel_updater.py",
    "src/main.py",
]

# Ship py.typed so mypy treats our installed package as typed (PEP 561).
[tool.hatch.build.targets.wheel.force-include]
"src/job_automation/py.typed" = "job_automation/py.typed"

# ──────────────────────────────────────────────────────────────────────
# Tool configuration
# ──────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/job_automation",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # Third-party deprecations we can't fix
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:sentence_transformers",
]

[tool.coverage.run]
branch = true
source = ["src/job_automation"]
omit = ["*/_legacy_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src/job_automation", "tests"]

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, B = bugbear, UP = pyupgrade,
# SIM = simplify, RUF = ruff-specific, N = pep8-naming, TCH = type-checking
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "N", "TCH"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in defaults — Pydantic uses these for validators
    "TC001", # application imports used only for type hints
    "TC003", # stdlib imports used only for type hints
    "RUF012", # mutable class attributes are intentional in logging formatters
    "B039",  # ContextVar default={} is safe inside a controlled logger module
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "N802"]  # asserts and pytest fixture naming

[tool.ruff.lint.isort]
known-first-party = ["job_automation"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# Legacy engines from src/ that aren't part of the installed package.
module = [
    "src.config",
    "src.excel_loader",
    "src.deduplicator",
    "src.matcher",
    "src.resume_generator",
    "src.cover_letter_generator",
    "src.latex_compiler",
    "src.excel_updater",
    "src.main",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
# Third-party libs without stubs
module = [
    "sentence_transformers.*",
    "faiss.*",
    "rapidfuzz.*",
    "docx.*",
    "pylatex.*",
    "pandas.*",
]
ignore_missing_imports = true